movimentos nas imagens, botão de home, rodapé

--- a/eletrodomesticos.html
+++ b/eletrodomesticos.html
@@ -12,12 +12,12 @@
 <body class="corpoeletrodomes">
     <div class="containershopping">
         <div class="cabecalho">
-            <a href="index.html"><img class="logo1" src="img/logomaotransp.png" alt="Duas mãos se comprimentando"></a>
-            <a href="primeira.html"><img class="logo2" src="img/logonometransp.png" alt="Nome Mercado Livre"></a>
+            <img class="logo1" src="img/logomaotransp.png" alt="Duas mãos se comprimentando">
+            <img class="logo2" src="img/logonometransp.png" alt="Nome Mercado Livre">
         </div>
 
     </div>
-    <div class="barra">
+    <div class="barraeletrodomestico">
         <a href="eletronicos.html">Eletrônicos</a>
         <a href="eletrodomesticos.html">Eletrodomésticos</a>
         <a href="roupas.html">Roupas</a>
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="eletrodomestico">
-                <img src="img/microondas.png" alt="Microondas Samsung" width="300px">
+                <img src="img/microondas.png" alt="Microondas Samsung" width="300px" height="auto">
                 <div class="eletrodomestico-text">
                     Microondas Samsung
                 </div>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="eletrodomestico">
-                <img src="img/aspirador.png" alt="Aspiraodor de pó" width="300px">
+                <img src="img/aspirador.png" alt="Aspiraodor de pó" width="300px" height="auto">
                 <div class="eletrodomestico-text">
                     Aspirador de pó
                 </div>
@@ -53,7 +53,7 @@
                 </div>
             </div>
             <div class="eletrodomestico">
-                <img src="img/maquina.png" alt="Máquina lava e seca" width="300px">
+                <img src="img/maquina.png" alt="Máquina lava e seca" width="300px" height="auto">
                 <div class="eletrodomestico-text">
                     Maquina lava e seca
                 </div>
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="eletrodomestico">
-                <img src="img/filtro.png" alt="Filtro de água eletrico" width="300px">
+                <img src="img/filtro.png" alt="Filtro de água eletrico" width="300px" height="auto">
                 <div class="eletrodomestico-text">
                     Filtro de água Electrolux
                 </div>
@@ -71,7 +71,7 @@
                 </div>
             </div>
     </section>
-    
+
     <section>
         <div class="eletrodomesticos">
             <div class="eletrodomestico">
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="eletrodomestico">
-                <img src="img/frigobar.png" alt="Frigobar 90 litros" width="300px">
+                <img src="img/frigobar.png" alt="Frigobar 90 litros" width="300px" height="auto">
                 <div class="eletrodomestico-text">
                     Frigobar preto 90 litros
                 </div>
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="eletrodomestico">
-                <img src="img/adega.png" alt="Adega para vinhos" width="300px">
+                <img src="img/adega.png" alt="Adega para vinhos" width="300px" height="auto">
                 <div class="eletrodomestico-text">
                     Adega eletrica
                 </div>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="eletrodomestico">
-                <img src="img/cooktop.png" alt="Cooktop 4 bocas" width="300px">
+                <img src="img/cooktop.png" alt="Cooktop 4 bocas" width="300px" height="auto">
                 <div class="eletrodomestico-text">
                     Cooktop a gás 4 bocas
                 </div>
@@ -120,6 +120,17 @@
                 </div>
             </div>
     </section>
+    <footer>
+        <div class="conteudorodape">
+            <p>Site ilustrativo para o trabalho de Desenvolvimento para Internet.
+            </p>
+        </div>
+    </footer>
+    <div>
+    <a href="selecao.html" class="linktopo">
+        <i class="fas fa-house"></i>
+    </a>
+    </div>
     </div>
 </body>
 
