--- a/index.html
+++ b/index.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Seja bem-vindo!</title>
+    <title>Mercado Livre</title>
 </head>
-
-<body>
-    <div class="containershopping">
-        <div class="cabecalho">
-                <a href="index.html"><img class="logo1" src="img/logomaotransp.png" alt="Duas mãos se comprimentando"></a>
-                <a href="primeira.html"><img class="logo2" src="img/logonometransp.png" alt="Nome Mercado Livre"></a> 
-            </div>
-            
+<body class="primeira">
+    <div class="container">
+        <div class="imglogo">
+            <a href="selecao.html"><img src="img/mercado-livre-logo.svg" alt=""></a> 
         </div>
-        <div class="barra">
-            <a href="eletronicos.html">Eletrônicos</a>
-            <a href="eletrodomesticos.html">Eletrodomésticos</a>
-            <a href="roupas.html">Roupas</a>
+        <div class="titulo">
+            <h1>O mercado livre está de cara nova...</h1>
+        </div>
+        <div class="subtitulo">
+            <a href="selecao.html"><h2>Venha Conferir!</h2></a>
         </div>
 
-        <div class="selecao">
-            <h1>Selecione a categoria acima que melhor combina com você!</h1>
-        </div>
+
+
+
+
 
 
 
 
     </div>
 </body>
-
 </html>
