--- a/roupas.html
+++ b/roupas.html
@@ -12,12 +12,12 @@
 <body class="corpoeletronico">
     <div class="containershopping">
         <div class="cabecalho">
-            <a href="index.html"><img class="logo1" src="img/logomaotransp.png"  alt="Duas mãos se comprimentando"></a>
-            <a href="primeira.html"><img class="logo2" src="img/logonometransp.png" alt="Nome Mercado Livre"></a>
+            <img class="logo1" src="img/logomaotransp.png"  alt="Duas mãos se comprimentando">
+            <img class="logo2" src="img/logonometransp.png" alt="Nome Mercado Livre">
         </div>
 
     </div>
-    <div class="barra">
+    <div class="barraroupa">
         <a href="eletronicos.html">Eletrônicos</a>
         <a href="eletrodomesticos.html">Eletrodomésticos</a>
         <a href="roupas.html">Roupas</a>
@@ -121,6 +121,16 @@
             <section>
         </div>
     </section>
+    <footer>
+        <div class="conteudorodape">
+            <p>Site ilustrativo para o trabalho de Desenvolvimento para Internet.
+            </p>
+        </div>
+    </footer>
+    <a href="selecao.html" class="linktopo">
+        <i class="fas fa-house"></i>
+    </a>
+    </div>
 </body>
 
 </html>
