--- a/eletronicos.html
+++ b/eletronicos.html
@@ -12,13 +12,12 @@
 <body class="corpoeletronico">
     <div class="containershopping">
         <div class="cabecalho">
-            <a href="index.html"><img class="logo1" src="img/logomaotransp.png"
-                    alt="Duas mãos se comprimentando"></a>
-            <a href="primeira.html"><img class="logo2" src="img/logonometransp.png" alt="Nome Mercado Livre"></a>
+            <img class="logo1" src="img/logomaotransp.png" alt="Duas mãos se comprimentando">
+            <img class="logo2" src="img/logonometransp.png" alt="Nome Mercado Livre">
         </div>
 
     </div>
-    <div class="barra">
+    <div class="barraeletronico">
         <a href="eletronicos.html">Eletrônicos</a>
         <a href="eletrodomesticos.html">Eletrodomésticos</a>
         <a href="roupas.html">Roupas</a>
@@ -95,7 +94,7 @@
             <div class="eletronico">
                 <img src="img/galaxy.png" alt="Smartphone Galaxy S22" width="300px" height="auto">
                 <div class="eletronico-text">
-                    Smartphone Galaxy S22 com SPen 
+                    Smartphone Galaxy S22 com SPen
                 </div>
                 <div class="comprar">
                     <a href="#">Comprar</a>
@@ -122,6 +121,17 @@
             <section>
         </div>
     </section>
+    <footer>
+        <div class="conteudorodape">
+            <p>Site ilustrativo para o trabalho de Desenvolvimento para Internet.
+            </p>
+        </div>
+    </footer>
+    <div>
+        <a href="selecao.html" class="linktopo">
+            <i class="fas fa-house"></i>
+        </a>
+    </div>
 </body>
 
 </html>
